<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".register">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textColor="#575757"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="314dp"
                android:layout_height="37dp"
                android:text="@string/signupQuote"
                android:textAlignment="viewStart"
                android:textColor="#323232"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_edittext_background"
                android:elevation="4dp"
                android:ems="10"
                android:textColor="#323232"
                android:hint="@string/namefield"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColorHint="#B0B0B0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#323232"
                android:layout_marginTop="24dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_edittext_background"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/emailfield"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColorHint="#B0B0B0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etname" />

            <EditText
                android:elevation="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="#323232"
                android:paddingStart="15dp"
                android:background="@drawable/rounded_edittext_background"
                android:textColorHint="#B0B0B0"
                android:autofillHints="password"
                android:hint="@string/passfield"
                android:id="@+id/etpass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etemail" />

            <EditText
                android:id="@+id/etconfpass"
                android:layout_width="300dp"
                android:textColor="#323232"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_edittext_background"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/confpass"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColorHint="#B0B0B0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etpass" />


            <Button
                android:id="@+id/btnregister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:backgroundTint="#575757"
                android:text="@string/signup"
                android:textColor="#f3f3f3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etconfpass" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>