<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomePage">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:backgroundTint="#AFADAD"
            android:rotation="7"
            app:cardCornerRadius="12dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:backgroundTint="#AFADAD"
            android:rotation="-7"
            app:cardCornerRadius="12dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:backgroundTint="#F3F3F3"
            app:cardCornerRadius="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvcardbalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/balance"
                    android:textColor="#575757"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.017"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvbalanceamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/balamount"
                    android:textColor="#323232"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.123"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvcardbalance" />

                <TextView
                    android:id="@+id/tvcardno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardno"
                    android:textColor="#575757"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.123"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvbalanceamount"
                    app:layout_constraintVertical_bias="0.737" />

                <FrameLayout
                    android:layout_width="61dp"
                    android:layout_height="44dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.655"
                    app:layout_constraintStart_toEndOf="@+id/tvcardno">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:contentDescription="@string/cardlogo"
                        android:src="@drawable/ellipse_2" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:contentDescription="@string/cardlogo"
                        android:src="@drawable/ellipse_1" />


                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/Recentactivity"
            android:textColor="#3f3f3f"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvViewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/viewall"
            android:textAlignment="viewEnd"
            android:textColor="#575757"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="380sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

    </androidx.cardview.widget.CardView>

    <!-- Use the rounded rectangle drawable as the background for a View -->
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/upper_rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/IVstats"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/empty_piechart"
        app:layout_constraintBottom_toBottomOf="@+id/IvExpensesPage"
        app:layout_constraintStart_toEndOf="@+id/addExpense"
        app:layout_constraintTop_toTopOf="@+id/IvExpensesPage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/IVhome"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/filledhomepage_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/IvExpensesPage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/list"
        app:layout_constraintBottom_toBottomOf="@+id/IVhome"
        app:layout_constraintEnd_toStartOf="@+id/addExpense"
        app:layout_constraintStart_toEndOf="@+id/IVhome"
        app:layout_constraintTop_toTopOf="@+id/IVhome"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/IVUser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/empty_person"
        app:layout_constraintBottom_toBottomOf="@+id/IVstats"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/IVstats"
        app:layout_constraintTop_toTopOf="@+id/IVstats"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addExpense"
        android:contentDescription="@string/balamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#575757"
        android:clickable="true"
        android:src="@drawable/addsign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Home"
        android:textAlignment="viewStart"
        android:textColor="#575757"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

</androidx.constraintlayout.widget.ConstraintLayout>